# anomaly_detect_sample

./: LICENSE  pyproject.toml
src/: chap2.ipynb
